Update HTML structure and meta tags

--- a/Cargo-Receiver/client/index.html
+++ b/Cargo-Receiver/client/index.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-
-    <meta property="og:title" content="Paperless Logistics" />
-    <meta property="og:description" content="Sistema de conferência e recebimento de carga paperless" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Paperless Logistics" />
-    <meta name="twitter:description" content="Sistema de conferência e recebimento de carga paperless" />
-
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <title>Paperless Logistics</title>
+    <link rel="icon" type="image/png" href="/me.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Paperless</title>
   </head>
   <body>
     <div id="root"></div>
